fixed checkout alignment bugs

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -154,12 +154,12 @@
     font-weight: 500;
     margin-bottom: .8rem;
 }
-.wishlist-container a{
+.wishlist-container button{
     background-color: var(--btn-bg-clr);
     font-weight: 500;
     margin-top: 1rem;
     padding-block: .4rem;
-    padding-inline: 1rem;
+    padding-inline: 2rem;
     border-radius: 5px;
     transition: background-color .3s;
 
