--- a/src/components/main/checkout.css
+++ b/src/components/main/checkout.css
@@ -138,7 +138,7 @@
 }
 .checkout__main-content .bottom__right{
 
-    padding-inline: 2%;
+    padding-inline: 4%;
     
     border: 3px solid var(--btn-bg-clr);
     border-radius: 10px;
@@ -241,9 +241,12 @@
 }
 
 @media (min-width: 768px) {
-    /* .checkout__main-content .bottom{ */
-        /* min-width: 100%; */
-        /* display: flex; */
-        /* flex-direction: column; */
-        /* border:  1px solid green; */
-    }
+    .checkout__main-content .bottom__right{
+
+        padding-inline: 1%;
+        
+        /* border: 3px solid var(--btn-bg-clr);
+        border-radius: 10px; */
+      
+      }
+}
