--- a/src/components/main/styles.css
+++ b/src/components/main/styles.css
@@ -214,9 +214,10 @@
     }
  
     .product img{
-        height: 200px;
+        height: 150px;
         min-width: 100%;
         object-fit: cover;
-        border-radius: 20px;
+        /* border-radius: 20px; */
+        /* display: none; */
     }
 }
